--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
